--- a/ui/src/scss/_variables.scss
+++ b/ui/src/scss/_variables.scss
@@ -21,6 +21,7 @@ $sp-color-primary-light: rgb(59, 205, 76);
 $sp-color-accent: rgb(27, 20, 100);
 $sp-color-accent-light-blue: rgb(59, 92, 149);
 $sp-color-accent-light: rgb(156, 156, 156);
+$sp-color-accent-light-transparent: rgba(156, 156, 156, 0.4);
 
 $sp-color-stream: #FFEB3B;
 $sp-color-set: #ffa23b;
