--- a/ui/src/app/pipeline-details/pipeline-details.component.html
+++ b/ui/src/app/pipeline-details/pipeline-details.component.html
@@ -24,7 +24,8 @@
                     <mat-tab label="Overview"></mat-tab>
                     <mat-tab label="Monitoring"></mat-tab>
                     <mat-tab label="Errors"></mat-tab>
-                    <mat-tab label="Quick Edit" [disabled]="pipelineAvailable && pipeline.running"></mat-tab>
+<!--                    <mat-tab label="Quick Edit" [disabled]="pipelineAvailable && pipeline.running"></mat-tab>-->
+                    <mat-tab label="Quick Edit"></mat-tab>
                 </mat-tab-group>
             </div>
         </div>
