--- a/ui/src/app/connect/components/data-marketplace/data-marketplace.component.css
+++ b/ui/src/app/connect/components/data-marketplace/data-marketplace.component.css
@@ -82,3 +82,12 @@
 ::ng-deep .mat-select-panel:not([class*=mat-elevation-z]) {
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 }
+
+.content {
+  position: absolute;
+  color: black;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
