--- a/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
+++ b/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
@@ -102,15 +102,16 @@
             </div>
         </div>
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
-            <div cdkDropList class="data-format-list" (cdkDropListDropped)="dropProtocol($event)"
+            <div cdkDropList class="data-format-list" (cdkDropListDropped)="dropEdgeProtocol($event)"
                  *ngIf="loadingCompleted">
-                <div class="data-format-box"cdkDrag>
-                    {{messagingSettings.edgeNodeProtocol}}
+                <div class="data-format-box" *ngFor="let edgeProtocol of messagingSettings.prioritizedEdgeProtocols"
+                     cdkDrag>
+                    {{edgeProtocol}}
                 </div>
             </div>
             <div fxLayoutAlign="end center">
-<!--                <button mat-raised-button color="primary" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update-->
-<!--                </button>-->
+                <button mat-raised-button color="primary" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
+                </button>
             </div>
         </div>
 
