--- a/ui/src/app/configuration/node-configuration/node-configuration.component.scss
+++ b/ui/src/app/configuration/node-configuration/node-configuration.component.scss
@@ -76,6 +76,8 @@ li {
     background: $sp-color-primary;
     border: 1px solid $sp-color-primary;
     padding: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .span-node-inactive{
@@ -85,6 +87,8 @@ li {
     background: white;
     border: 1px solid #f1c40f;
     padding: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .div-sa-tag{
