[WIP] refactoring node-controller

--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.scss
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.scss
@@ -18,9 +18,9 @@
 
 @import '../../../../scss/sp/sp-dialog.scss';
 
-//.sp-dialog-container {
-//  width: 520px;
-//}
+.sp-dialog-container {
+  width: 500px;
+}
 
 .customize-section {
   display:flex;
